Mon Jan 15 19:54:12 UTC 2007 / Niels Baggesen <nba@users.sourceforge.net>

 * clients/upsstats.c:
   - remove bogus test that makes upsstats.cgi fail unpredictbaly

Mon Jan 15 19:27:27 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * server/access.c:
   - add range checks for CIDR notation
   - when an ACL can't be parsed, abort rather than ignoring it silently
   - store addresses and masks in network byte order, so these don't have to
     be reordered each time when checking access
   - don't require IPv6 addresses to be enclosed in [square brackets] (which
     is confusing, since we don't require this for IPv4 addresses either)

Mon Jan 15 03:59:07 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - packaging/mandriva: renamed newhidups to usbhid-ups
 - changed description of "beeper.off" to "Temporarily mute UPS
   beeper/buzzer" to avoid a frequent misunderstanding.

Sun Jan 14 17:20:46 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd.c: remove code that's not really needed

Sun Jan 14 17:07:33 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/conf.c, server/upsd.ch: "unhardcode" default PORT, simplify
   setting the default listening address

Sat Jan 13 20:12:16 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * clients/upsclient.ch: 
   - hostname can now be specified as a fully.qualified.domain.name or an
     [address literal]
   - cleaned up IPv6 code
 * m4/nut_check_ipv6.m4:
   - removed check for AI_ADDRCONFIG, since it is no longer used (for
     portability reasons, wasn't really needed anyway)
 * server/upsd.ch, server/conf.c, server/stype.h:
   - listen on multiple TCP sockets (to be configured in upsd.conf)
   - removed -i and -p options which are obsoleted by the above
   - listening address can be specified as a fully.qualified.domain.name
     or an [address literal]
   - cleaned up IPv6 code
 * conf/upsd.conf.sample:
   - added new LISTEN parameter
